--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,45 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="dark">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact — Courtney Arnold-Harrison</title>
-  <link rel="stylesheet" href="assets/styles.css">
-  <script defer src="assets/scripts.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact — Courtney Arnold-Harrison</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <script defer src="assets/script.js"></script>
 </head>
 <body>
-  <header class="site-header">
-    <a class="logo" href="index.html">Courtney A-H</a>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="skills.html">Skills</a>
-      <a href="showcase.html">Showcase</a>
-      <a href="problem-solving.html">Problem-Solving</a>
-      <a href="contact.html" class="cta">Contact</a>
-    </nav>
-  </header>
+    <header class="header">
+        <h1 class="page-title">Contact</h1>
+        <div class="header-right">
+            <nav class="nav">
+                <a href="index.html">Home</a>
+                <a href="skills.html">Skills</a>
+                <a href="showcase.html">Showcase</a>
+                <a href="problem-solving.html">Problem-Solving</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <button id="theme-toggle" class="theme-toggle">☾</button>
+        </div>
+    </header>
 
-  <main class="container">
-    <h1>Contact</h1>
+    <main class="container card">
+        <h2>Get in touch</h2>
+        <p>Email for assessment: <a href="mailto:c.n.arnold-harrison@edu.salford.ac.uk" class="badge">c.n.arnold-harrison@edu.salford.ac.uk</a></p>
 
-    <section class="contact-card">
-      <h2>Courtney Arnold-Harrison</h2>
-      <p><strong>Email:</strong> <a href="mailto:Cnah202@gmail.com">Cnah202@gmail.com</a></p>
-      <p><strong>Phone:</strong> 07498 819517</p>
-      <p><strong>Location:</strong> Manchester</p>
-      <div class="socials">
-        <h3>Socials</h3>
-        <ul>
-          <li><a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub (replace link)</a></li>
-          <li><a href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener">LinkedIn (replace link)</a></li>
-          <li><a href="https://twitter.com/your-handle" target="_blank" rel="noopener">X / Twitter (replace link)</a></li>
-          <li><a href="https://instagram.com/your-handle" target="_blank" rel="noopener">Instagram (replace link)</a></li>
-        </ul>
-      </div>
+        <h3>Follow / Social</h3>
+        <div class="social-list">
+            <a href="https://www.linkedin.com/in/courtney-arnold-harrison-590bb3263" target="_blank" rel="noopener">LinkedIn</a>
+        </div>
 
-      <div class="buttons">
-        <a class="btn primary" href="mailto:Cnah202@gmail.com?subject=Opportunity">Email Courtney</a>
-        <button class="btn ghost" id="download-cv">Download CV (PDF)</button>
-      </div>
+        <h3 style="margin-top:16px">Contact details (restaurant)</h3>
+        <p>Restaurant name: The Local Kitchen</p>
+        <p>Phone: 07498819517</p>
+        <p>Email: <a href="mailto:c.n.arnold-harrison@edu.salford.ac.uk">c.n.arnold-harrison@edu.salford.ac.uk</a></p>
+    </main>
 
-      <p class="note">Tip: Replace the placeholder social links above with your real accounts before submission.</p>
-    </section>
-
-  </main>
-
-  <footer class="site-footer">
-    <p>© <span id="year-2"></span> Courtney Arnold-Harrison</p>
-  </footer>
+    <footer class="footer-note">
+        <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
+    </footer>
 </body>
 </html>
 
