--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="header">
         <div class="brand">
-            <img src="https://cdn.theuniguide.co.uk/uploads/image/file/11329/University_of_Salford.png" alt="Headshot" class="headshot">
+            <img src="https://cdn.theuniguide.co.uk/uploads/image/file/11329/University_of_Salford.png" alt="Courtney Arnold-Harrison Headshot" style="width:120px; border-radius:12px;">
             <div>
                 <h1>Courtney Arnold-Harrison</h1>
-                <p>Second year student at the university of Salford, currently studying Business management with innovation and technology.</p>
+                <p>Second year student at the University of Salford, currently studying Business Management with Innovation and Technology.</p>
             </div>
         </div>
         <div class="header-right">
@@ -28,23 +28,24 @@
         </div>
     </header>
 
-    <main class="container">
-        <section class="hero card">
-            <div class="hero-text">
-                <p>Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
-                <div class="buttons" style="margin-top:16px;">
-                    <a href="showcase.html" class="btn">View My Projects</a>
-                    <a href="skills.html" class="btn">View My Skills</a>
-                    <a href="contact.html" class="btn">Contact Me</a>
-                </div>
-            </div>
-        </section>
+    <main class="container card">
+        <h2>About Me</h2>
+        <p>Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
+
+        <div style="margin-top:1.5rem; display:flex; gap:10px; flex-wrap:wrap;">
+            <a href="showcase.html" class="btn">View my Projects</a>
+            <a href="skills.html" class="btn">View my Skills</a>
+            <a href="contact.html" class="btn">Contact Me</a>
+        </div>
     </main>
 
-    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif">
+    <!-- Floating GIF as footnote -->
+    <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" 
+         alt="Decorative floating GIF" class="floating-gif">
 
     <footer class="footer-note">
         <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
     </footer>
 </body>
 </html>
+
