--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="page-title">Skills & Strengths</h1>
+        <div class="brand">
+            <h1>Skills & Strengths</h1>
+        </div>
         <div class="header-right">
             <nav class="nav">
                 <a href="index.html">Home</a>
@@ -23,31 +25,44 @@
     </header>
 
     <main class="container">
-        <section class="grid grid-3">
-
+        <section class="grid" style="gap:20px; margin-top:20px;">
+            <!-- Technical Tools & Software -->
             <div class="card">
-                <h2>Data Analysis</h2>
-                <p>Skilled in gathering, cleaning, and analysing datasets using Excel and Power BI to generate actionable insights for business decisions.</p>
+                <h2>Technical Tools & Software</h2>
+                <p>Proficient in <strong>Excel</strong> for advanced data analysis, including pivot tables, charts, and conditional formatting.</p>
+                <p>Skilled in <strong>Power BI</strong> to create interactive dashboards, reports, and data visualizations for decision-making.</p>
+                <p>Comfortable importing, cleaning, and connecting datasets to generate actionable insights.</p>
+                <button class="btn">Learn More</button>
             </div>
 
+            <!-- Analytical Skills -->
             <div class="card">
-                <h2>Technical Tools</h2>
-                <p>Experienced in Excel and Power BI for visualising and reporting data. Capable of creating dashboards and presenting findings in clear, structured formats.</p>
+                <h2>Analytical Skills</h2>
+                <p>Strong capability in <strong>data interpretation and problem-solving</strong>, identifying trends and anomalies in datasets.</p>
+                <p>Experienced in producing <strong>visual and written reports</strong> to communicate findings effectively to both technical and non-technical audiences.</p>
+                <p>Confident in applying logical and structured approaches to support evidence-based decision-making.</p>
+                <button class="btn">Learn More</button>
             </div>
 
+            <!-- Workplace Skills -->
             <div class="card">
-                <h2>Problem Solving & Communication</h2>
-                <p>Able to break down complex problems, identify patterns, and communicate findings effectively to both technical and non-technical stakeholders.</p>
+                <h2>Workplace Skills</h2>
+                <p>Demonstrated <strong>teamwork and collaboration</strong>, leading group tasks and contributing to joint problem-solving.</p>
+                <p>Strong <strong>communication skills</strong>, presenting ideas clearly and adapting messaging for different audiences.</p>
+                <p>Effective <strong>time management and organization</strong>, prioritizing tasks to meet deadlines in academic and work-based projects.</p>
+                <button class="btn">Learn More</button>
             </div>
-
         </section>
+
+        <!-- Floating GIF at the bottom -->
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" 
+             alt="Decorative floating GIF" class="floating-gif">
+
+        <footer class="footer-note">
+            <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
+        </footer>
     </main>
-
-    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif">
-
-    <footer class="footer-note">
-        <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
-    </footer>
 </body>
 </html>
+
 
