--- a/showcase.html
+++ b/showcase.html
@@ -1,3 +1,17 @@
+
+
+<div class="header-right">
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="skills.html">Skills</a>
+    <a href="showcase.html">Showcase</a>
+    <a href="problem-solving.html">Problem-Solving</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <button id="theme-toggle" class="theme-toggle">☾</button>
+</div>
+
+
 <!-- Project / Experience Card 1 -->  
 <div class="card project-card">  
   <div style="display: flex; align-items: center; gap: 12px;">  
