--- a/problem-solving.html
+++ b/problem-solving.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problem-Solving — Courtney Arnold-Harrison</title>
+    <title>Problem-Solving </title>
     <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/script.js"></script>
 </head>
 <body>
     <header class="header">
         <h1 class="page-title">Problem-Solving</h1>
-        <div class="header-right">
-            <nav class="nav">
-                <a href="index.html">Home</a>
-                <a href="skills.html">Skills</a>
-                <a href="showcase.html">Showcase</a>
-                <a href="problem-solving.html">Problem-Solving</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-            <button id="theme-toggle" class="theme-toggle">☾</button>
-        </div>
+       <div class="header-right">
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="skills.html">Skills</a>
+    <a href="showcase.html">Showcase</a>
+    <a href="problem-solving.html">Problem-Solving</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <button id="theme-toggle" class="theme-toggle">☾</button>
+</div>
+
     </header>
 
     <main class="container">
