--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home — Courtney Arnold-Harrison</title>
-    <link rel="stylesheet" href="assets/style.css">
-    <script defer src="assets/script.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Home — Courtney Arnold-Harrison Portfolio</title>
+<link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <header class="header">
-        <div class="brand">
-            <img src="https://cdn.theuniguide.co.uk/uploads/image/file/11329/University_of_Salford.png" alt="Courtney Arnold-Harrison Headshot" style="width:120px; border-radius:12px;">
-            <div>
-                <h1>Courtney Arnold-Harrison</h1>
-                <p>Second year student at the University of Salford, currently studying Business Management with Innovation and Technology.</p>
-            </div>
-        </div>
-        <div class="header-right">
-            <nav class="nav">
-                <a href="index.html">Home</a>
-                <a href="skills.html">Skills</a>
-                <a href="showcase.html">Showcase</a>
-                <a href="problem-solving.html">Problem-Solving</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-            <button id="theme-toggle" class="theme-toggle">☾</button>
-        </div>
-    </header>
 
-    <main class="container card">
-        <h2>About Me</h2>
-        <p>Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
+<header class="header">
+  <div class="brand" style="display:flex;align-items:center;">
+    <img src="https://cdn.theuniguide.co.uk/uploads/image/file/11329/University_of_Salford.png" alt="Headshot">
+    <div>
+      <h1>Courtney Arnold-Harrison</h1>
+      <p>Second year student at the University of Salford, currently studying Business Management with Innovation and Technology.</p>
+    </div>
+  </div>
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="skills.html">Skills</a>
+    <a href="showcase.html">Showcase</a>
+    <a href="problem-solving.html">Problem-Solving</a>
+    <a href="contact.html">Contact</a>
+    <button class="btn" id="theme-toggle">🌙 / ☀️</button>
+  </nav>
+</header>
 
-        <div style="margin-top:1.5rem; display:flex; gap:10px; flex-wrap:wrap;">
-            <a href="showcase.html" class="btn">View my Projects</a>
-            <a href="skills.html" class="btn">View my Skills</a>
-            <a href="contact.html" class="btn">Contact Me</a>
-        </div>
-    </main>
+<main class="container">
+  <section class="card" style="text-align:center;">
+    <p>Hi! I am an aspiring Data Analyst and this website is going to show you an insight into the technical and workplace skills I have gained so far amongst my career and educational journey.</p>
+    <div style="margin-top:12px;">
+      <a href="showcase.html" class="btn">View my projects</a>
+      <a href="skills.html" class="btn">View my skills</a>
+      <a href="contact.html" class="btn">Contact me</a>
+    </div>
+  </section>
+</main>
 
-    <!-- Floating GIF as footnote -->
-    <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" 
-         alt="Decorative floating GIF" class="floating-gif">
+<img class="floating-gif" src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" alt="floating GIF">
 
-    <footer class="footer-note">
-        <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
-    </footer>
+<footer class="footer">
+  Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.
+</footer>
+
+<script src="assets/theme.js"></script>
 </body>
 </html>
-
