--- a/problem-solving.html
+++ b/problem-solving.html
@@ -1,85 +1,96 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problem-Solving </title>
-    <link rel="stylesheet" href="assets/style.css">
-    <script defer src="assets/script.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Problem-Solving — Courtney Arnold-Harrison Portfolio</title>
+<link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <header class="header">
-        <h1 class="page-title">Problem-Solving</h1>
-       <div class="header-right">
+
+<header class="header">
+  <div class="brand" style="display:flex;align-items:center;">
+    <h1>Problem-Solving</h1>
+  </div>
   <nav class="nav">
     <a href="index.html">Home</a>
     <a href="skills.html">Skills</a>
     <a href="showcase.html">Showcase</a>
     <a href="problem-solving.html">Problem-Solving</a>
     <a href="contact.html">Contact</a>
+    <button class="btn" id="theme-toggle">🌙 / ☀️</button>
   </nav>
-  <button id="theme-toggle" class="theme-toggle">☾</button>
+</header>
+
+<main class="container">
+
+  <section class="card">
+    <h2>Business Context</h2>
+    <p>This page supports the restaurant’s digital transformation goals: improve customer engagement, modernise communications, and streamline bookings without a database.</p>
+
+    <h3>Contact & LinkedIn</h3>
+    <p>Phone: 07498819517 — Email: <a href="mailto:c.n.arnold-harrison@edu.salford.ac.uk">c.n.arnold-harrison@edu.salford.ac.uk</a></p>
+    <div class="social-list" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/courtney-arnold-harrison-590bb3263" target="_blank" rel="noopener">LinkedIn</a>
+    </div>
+
+    <hr style="margin:18px 0">
+
+    <h3>Booking / Feedback Form</h3>
+
+    <!-- progressive-enhancement: action mailto fallback for no-JS -->
+    <form id="ps-form" action="mailto:c.n.arnold-harrison@edu.salford.ac.uk" method="post" enctype="text/plain" class="card" style="margin-top:12px">
+      <div class="form-row">
+        <label for="name">Name</label>
+        <input id="name" name="name" placeholder="Full name" required>
+      </div>
+
+      <div class="form-row">
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email" placeholder="you@example.com" required>
+      </div>
+
+      <div class="form-row">
+        <label for="booking">Type of request</label>
+        <select id="booking" name="booking" required>
+          <option value="">Select...</option>
+          <option>Table booking</option>
+          <option>Private event enquiry</option>
+          <option>Feedback</option>
+          <option>Other</option>
+        </select>
+      </div>
+
+      <div class="form-row">
+        <label for="date">Preferred date (if booking)</label>
+        <input id="date" name="date" type="date">
+      </div>
+
+      <div class="form-row">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" placeholder="Tell us about your request..." required></textarea>
+      </div>
+
+      <div style="display:flex;gap:10px;align-items:center;margin-top:12px;">
+        <button class="btn" type="submit">Send request (opens email)</button>
+        <button class="btn btn-secondary" type="reset">Reset</button>
+        <div id="ps-status" style="color:var(--muted);font-size:14px"></div>
+      </div>
+    </form>
+
+    <p style="margin-top:12px;color:var(--muted)">Technical note: JavaScript composes a mailto: URL with the form data to open the user's email client. The HTML action provides a fallback for non-JS environments.</p>
+  </section>
+
+</main>
+
+<!-- Floating GIF at bottom duplicated to fill width -->
+<div style="position: fixed; bottom:0; left:0; width:100%; display:flex; justify-content:center; gap:0;">
+  <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
+  <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
+  <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
 </div>
 
-    </header>
+<footer class="footer">Portfolio written in 2025 — experiences and skills may need updating since then.</footer>
 
-    <main class="container">
-        <section class="card">
-            <h2>Contact & Socials</h2>
-            <p>Phone: 01234 567890 — Email: <a href="mailto:restaurant@example.com">restaurant@example.com</a></p>
-            <div class="social-list" aria-label="Restaurant social links">
-                <a href="#" target="_blank" rel="noopener">Facebook</a>
-                <a href="#" target="_blank" rel="noopener">Instagram</a>
-                <a href="#" target="_blank" rel="noopener">X (Twitter)</a>
-            </div>
-        </section>
-
-        <section class="card">
-            <h2>Booking / Feedback Form</h2>
-            <form id="ps-form" action="mailto:restaurant@example.com" method="post" enctype="text/plain">
-                <div class="form-row">
-                    <label for="name">Name</label>
-                    <input id="name" name="name" placeholder="Full name" required>
-                </div>
-                <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" name="email" placeholder="you@example.com" required>
-                </div>
-                <div class="form-row">
-                    <label for="booking">Type of request</label>
-                    <select id="booking" name="booking" required>
-                        <option value="">Select...</option>
-                        <option>Table booking</option>
-                        <option>Private event enquiry</option>
-                        <option>Feedback</option>
-                        <option>Other</option>
-                    </select>
-                </div>
-                <div class="form-row">
-                    <label for="date">Preferred date (if booking)</label>
-                    <input id="date" name="date" type="date">
-                </div>
-                <div class="form-row">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" placeholder="Tell us about your request..." required></textarea>
-                </div>
-                <div class="form-buttons" style="display:flex;gap:10px;align-items:center;margin-top:12px;">
-                    <button class="btn" type="submit">Send request (opens email)</button>
-                    <button class="btn btn-secondary" type="reset">Reset</button>
-                    <div id="ps-status" style="color:var(--muted);font-size:14px"></div>
-                </div>
-            </form>
-            <p style="margin-top:12px;color:var(--muted);font-size:14px;">
-                Technical note: JavaScript composes a mailto: URL with the form data to open the user's email client. The HTML action provides a fallback for non-JS environments.
-            </p>
-        </section>
-    </main>
-
-    <img src="assets/images/floating.gif" alt="Decorative floating GIF" class="floating-gif">
-
-    <footer class="footer-note">
-        <p>Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.</p>
-    </footer>
-</body>
-</html>
-
+<script src="assets/theme.js"></script>
+<script src="assets/main.js"></script>
