--- a/skills.html
+++ b/skills.html
@@ -5,16 +5,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Skills — Courtney Arnold-Harrison Portfolio</title>
 <link rel="stylesheet" href="assets/style.css">
-<style>
-/* additional styles for flip cards */
-.flip-container { display: grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap: 1rem; margin-top: 1rem; }
-</style>
 </head>
 <body>
 
 <header class="header">
-  <div class="brand" style="display:flex;align-items:center;">
-    <h1>Skills & Strengths</h1>
+  <div class="brand">
+    <h1>Skills & Qualifications</h1>
   </div>
   <nav class="nav">
     <a href="index.html">Home</a>
@@ -28,46 +24,41 @@
 
 <main class="container">
 
-  <section class="flip-container">
-
-    <!-- Flip Card 1: Technical Tools -->
-    <div class="flip-card">
+  <section class="grid grid-2">
+    <!-- Card 1: Technical Tools -->
+    <div class="card flip-card">
       <div class="flip-card-inner">
-        <div class="flip-card-front card">
-          <h3>Technical Tools</h3>
-          <p>Excel, Power BI</p>
+        <div class="flip-card-front">
+          <h2>Technical Tools</h2>
+          <p>Click to view details</p>
         </div>
-        <div class="flip-card-back card">
-          <h3>Technical Tools</h3>
-          <p>Developed interactive dashboards and reporting tools using Excel and Power BI. Built visual analytics for forecasting and data presentation.</p>
+        <div class="flip-card-back">
+          <h2>Technical Tools</h2>
+          <ul>
+            <li>Microsoft Excel – Advanced spreadsheets, pivot tables, data analysis</li>
+            <li>Power BI – Data visualizations, dashboards, reporting</li>
+            <li>SQL Basics – Querying databases for reporting</li>
+            <li>Tableau (Optional) – Interactive dashboards</li>
+          </ul>
         </div>
       </div>
     </div>
 
-    <!-- Flip Card 2: Data Analysis -->
-    <div class="flip-card">
+    <!-- Card 2: Workplace Skills -->
+    <div class="card flip-card">
       <div class="flip-card-inner">
-        <div class="flip-card-front card">
-          <h3>Data Analysis</h3>
-          <p>Business & quantitative analysis</p>
+        <div class="flip-card-front">
+          <h2>Workplace Skills</h2>
+          <p>Click to view details</p>
         </div>
-        <div class="flip-card-back card">
-          <h3>Data Analysis</h3>
-          <p>Performed structured analysis of datasets to identify trends, inform decision-making, and support strategic planning. Experience in preparing reports for stakeholders.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Flip Card 3: Communication & Organisation -->
-    <div class="flip-card">
-      <div class="flip-card-inner">
-        <div class="flip-card-front card">
-          <h3>Communication & Organisation</h3>
-          <p>Teamwork, presenting & time management</p>
-        </div>
-        <div class="flip-card-back card">
-          <h3>Communication & Organisation</h3>
-          <p>Led teams in project work, delegated tasks, and maintained clear communication channels. Skilled at reporting, presenting findings, and managing deadlines efficiently.</p>
+        <div class="flip-card-back">
+          <h2>Workplace Skills</h2>
+          <ul>
+            <li>Team Leadership – Delegating tasks and managing small teams</li>
+            <li>Project Planning – Milestone tracking and timely delivery</li>
+            <li>Communication – Professional email and presentation skills</li>
+            <li>Problem-Solving – Identifying bottlenecks and providing solutions</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -83,20 +74,12 @@
   <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
 </div>
 
-<footer class="footer">Portfolio written in 2025 — experiences and skills may need updating since then.</footer>
+<footer class="footer">
+  Please note this portfolio was written in 2025 during second year of university and experiences/work experience/qualifications may need updating since then.
+</footer>
 
 <script src="assets/theme.js"></script>
-<script>
-// Flip card interaction
-document.querySelectorAll('.flip-card-inner').forEach(card => {
-  card.addEventListener('click', () => {
-    card.classList.toggle('flipped');
-  });
-});
-</script>
+<script src="assets/main.js"></script>
 
 </body>
 </html>
-
-
-
