--- a/problem-solving.html
+++ b/problem-solving.html
@@ -1,96 +1,97 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Problem-Solving — Courtney Arnold-Harrison Portfolio</title>
-<link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8">
+  <title>Problem-Solving — Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
-<body>
+<body class="dark-mode">
+  <div class="container">
+    <!-- Header -->
+    <header class="header">
+      <div class="brand">
+        <h1>Problem-Solving</h1>
+      </div>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="skills.html">Skills</a>
+        <a href="showcase.html">Showcase</a>
+        <a href="problem-solving.html">Problem-Solving</a>
+        <a href="contact.html">Contact</a>
+        <button id="theme-toggle" class="theme-btn" aria-label="Toggle theme">🌙</button>
+      </nav>
+    </header>
 
-<header class="header">
-  <div class="brand" style="display:flex;align-items:center;">
-    <h1>Problem-Solving</h1>
-  </div>
-  <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="skills.html">Skills</a>
-    <a href="showcase.html">Showcase</a>
-    <a href="problem-solving.html">Problem-Solving</a>
-    <a href="contact.html">Contact</a>
-    <button class="btn" id="theme-toggle">🌙 / ☀️</button>
-  </nav>
-</header>
+    <!-- Main Content -->
+    <main class="card" style="margin-top:16px">
+      <h2>Business Context</h2>
+      <p>This page demonstrates the restaurant’s digital transformation goals: improve customer engagement, modernize communications, and streamline bookings without a database.</p>
 
-<main class="container">
+      <h2>Contact & Socials</h2>
+      <p>Phone: 07498819517 — Email: <a href="mailto:c.n.arnold-harrison@edu.salford.ac.uk" class="badge">c.n.arnold-harrison@edu.salford.ac.uk</a></p>
+      <div class="social-list">
+        <a href="https://www.linkedin.com/in/courtney-arnold-harrison-590bb3263" target="_blank" rel="noopener">LinkedIn</a>
+      </div>
 
-  <section class="card">
-    <h2>Business Context</h2>
-    <p>This page supports the restaurant’s digital transformation goals: improve customer engagement, modernise communications, and streamline bookings without a database.</p>
+      <hr style="margin:18px 0">
 
-    <h3>Contact & LinkedIn</h3>
-    <p>Phone: 07498819517 — Email: <a href="mailto:c.n.arnold-harrison@edu.salford.ac.uk">c.n.arnold-harrison@edu.salford.ac.uk</a></p>
-    <div class="social-list" aria-label="LinkedIn">
-      <a href="https://www.linkedin.com/in/courtney-arnold-harrison-590bb3263" target="_blank" rel="noopener">LinkedIn</a>
+      <h2>Booking / Feedback Form</h2>
+      <form id="ps-form" action="mailto:c.n.arnold-harrison@edu.salford.ac.uk" method="post" enctype="text/plain" class="card" style="margin-top:12px">
+        <div class="form-row">
+          <label for="name">Name</label>
+          <input id="name" name="name" placeholder="Full name" required>
+        </div>
+
+        <div class="form-row">
+          <label for="email">Email</label>
+          <input id="email" type="email" name="email" placeholder="you@example.com" required>
+        </div>
+
+        <div class="form-row">
+          <label for="booking">Type of request</label>
+          <select id="booking" name="booking" required>
+            <option value="">Select...</option>
+            <option>Table booking</option>
+            <option>Private event enquiry</option>
+            <option>Feedback</option>
+            <option>Other</option>
+          </select>
+        </div>
+
+        <div class="form-row">
+          <label for="date">Preferred date (if booking)</label>
+          <input id="date" name="date" type="date">
+        </div>
+
+        <div class="form-row">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" placeholder="Tell us about your request..." required></textarea>
+        </div>
+
+        <div style="display:flex;gap:10px;align-items:center;margin-top:8px">
+          <button class="btn" type="submit">Send request</button>
+          <button class="btn btn-secondary" type="reset">Reset</button>
+          <div id="ps-status" style="color:var(--muted);font-size:14px"></div>
+        </div>
+
+        <p class="note" style="margin-top:8px">HTML action provides fallback for non-JS environments; JavaScript composes mailto URL automatically.</p>
+      </form>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      Portfolio created in 2025 during second year of university; skills and experience may require updates.
+    </footer>
+
+    <!-- Floating GIF at bottom center -->
+    <div class="floating-footer">
+      <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" alt="Floating decorative GIF" style="height:100px; display:block; margin:0 auto">
     </div>
+  </div>
 
-    <hr style="margin:18px 0">
-
-    <h3>Booking / Feedback Form</h3>
-
-    <!-- progressive-enhancement: action mailto fallback for no-JS -->
-    <form id="ps-form" action="mailto:c.n.arnold-harrison@edu.salford.ac.uk" method="post" enctype="text/plain" class="card" style="margin-top:12px">
-      <div class="form-row">
-        <label for="name">Name</label>
-        <input id="name" name="name" placeholder="Full name" required>
-      </div>
-
-      <div class="form-row">
-        <label for="email">Email</label>
-        <input id="email" type="email" name="email" placeholder="you@example.com" required>
-      </div>
-
-      <div class="form-row">
-        <label for="booking">Type of request</label>
-        <select id="booking" name="booking" required>
-          <option value="">Select...</option>
-          <option>Table booking</option>
-          <option>Private event enquiry</option>
-          <option>Feedback</option>
-          <option>Other</option>
-        </select>
-      </div>
-
-      <div class="form-row">
-        <label for="date">Preferred date (if booking)</label>
-        <input id="date" name="date" type="date">
-      </div>
-
-      <div class="form-row">
-        <label for="message">Message</label>
-        <textarea id="message" name="message" rows="5" placeholder="Tell us about your request..." required></textarea>
-      </div>
-
-      <div style="display:flex;gap:10px;align-items:center;margin-top:12px;">
-        <button class="btn" type="submit">Send request (opens email)</button>
-        <button class="btn btn-secondary" type="reset">Reset</button>
-        <div id="ps-status" style="color:var(--muted);font-size:14px"></div>
-      </div>
-    </form>
-
-    <p style="margin-top:12px;color:var(--muted)">Technical note: JavaScript composes a mailto: URL with the form data to open the user's email client. The HTML action provides a fallback for non-JS environments.</p>
-  </section>
-
-</main>
-
-<!-- Floating GIF at bottom duplicated to fill width -->
-<div style="position: fixed; bottom:0; left:0; width:100%; display:flex; justify-content:center; gap:0;">
-  <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
-  <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
-  <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyOGRqd2Y1bDU4ZTNyOWV1NHZ1bjd0emlpbGE3bzl0bmpnNnk2ZDJxZCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/hmSXoiieHQX6Ix0AdW/giphy.gif" style="height:40px;">
-</div>
-
-<footer class="footer">Portfolio written in 2025 — experiences and skills may need updating since then.</footer>
-
-<script src="assets/theme.js"></script>
-<script src="assets/main.js"></script>
+  <script src="assets/theme.js"></script>
+  <script src="assets/main.js"></script>
+  <script src="assets/scripts.js"></script>
+</body>
+</html>
