--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body class="dark-mode">
+  <script src="assets/theme.js"></script>
   <div class="container">
     <!-- Header -->
     <header class="header">
