--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-
+<script src="assets/theme.js"></script>
 <header class="header">
   <div class="brand">
     <h1>Contact Me</h1>
