--- a/problem-solving.html
+++ b/problem-solving.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="assets/style.css">
 <head>
   <meta charset="UTF-8">
   <title>Problem-Solving — Portfolio</title>
