--- a/showcase.html
+++ b/showcase.html
@@ -67,6 +67,28 @@
   <script src="assets/theme.js"></script>
   <script src="assets/main.js"></script>
   <script src="assets/scripts.js"></script>
+  <!-- Cookie Consent Popup -->
+<div id="cookie-banner" class="cookie-banner hidden">
+  <div class="cookie-box">
+    <h2>Our site uses cookies</h2>
+
+    <p>
+      Cookies help us to ensure our site works securely, continually make
+      improvements, and personalise your experience.
+    </p>
+    <p>
+      Click “Accept All Cookies” for the best experience. You can change these
+      settings at any time.
+    </p>
+
+    <div class="cookie-buttons">
+      <button id="cookie-accept" class="cookie-btn">Accept All Cookies</button>
+      <button id="cookie-manage" class="cookie-btn">Manually Manage Cookies</button>
+      <button id="cookie-reject" class="cookie-btn">Reject All Cookies</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
 
