--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <a href="showcase.html">Showcase</a>
         <a href="problem-solving.html">Problem-Solving</a>
         <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
+
         <button id="theme-toggle" class="theme-btn" aria-label="Toggle theme">
           🌙
         </button>
