--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     <a href="showcase.html">Showcase</a>
     <a href="problem-solving.html">Problem-Solving</a>
     <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy Policy</a>
+
     <button class="btn" id="theme-toggle">🌙 / ☀️</button>
   </nav>
 </header>
